--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -69,7 +69,7 @@ jobs:
           $payload = [Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes((ConvertTo-Json -InputObject @{
             iat = [System.DateTimeOffset]::UtcNow.AddSeconds(-10).ToUnixTimeSeconds()
             exp = [System.DateTimeOffset]::UtcNow.AddMinutes(10).ToUnixTimeSeconds()
-            iss = $client_id
+            iss = $clientId
           }))).TrimEnd('=').Replace('+', '-').Replace('/', '_');
           $rsa = [System.Security.Cryptography.RSA]::Create()
           $rsa.ImportFromPem($privateKey)
