use ps5 function

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,11 +68,14 @@ jobs:
           }))).TrimEnd('=').Replace('+', '-').Replace('/', '_');
           $payload = [Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes((ConvertTo-Json -InputObject @{
             iat = [System.DateTimeOffset]::UtcNow.AddSeconds(-10).ToUnixTimeSeconds()
-            exp = [System.DateTimeOffset]::UtcNow.AddMinutes(10).ToUnixTimeSeconds()
+            exp = [System.DateTimeOffset]::UtcNow.AddMinutes(60).ToUnixTimeSeconds()
             iss = $clientId
           }))).TrimEnd('=').Replace('+', '-').Replace('/', '_');
           $rsa = [System.Security.Cryptography.RSA]::Create()
-          $rsa.ImportFromPem($privateKey)
+          $base64 = $privateKey.Replace("-----BEGIN RSA PRIVATE KEY-----", "").Replace("-----END RSA PRIVATE KEY-----", "").Replace("\n", "").Replace("\r", "")
+          byte[] keyBytes = [Convert]::FromBase64String(base64)
+          $bytesRead = 0
+          rsa.ImportRSAPrivateKey(keyBytes, out $bytesRead)
           $signature = [Convert]::ToBase64String($rsa.SignData([System.Text.Encoding]::UTF8.GetBytes("$header.$payload"), [System.Security.Cryptography.HashAlgorithmName]::SHA256, [System.Security.Cryptography.RSASignaturePadding]::Pkcs1)).TrimEnd('=').Replace('+', '-').Replace('/', '_')
           $jwt = "$header.$payload.$signature"
           Write-Host $jwt
