--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,10 +14,10 @@ permissions:
 
 jobs:
   update:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     defaults:
       run:
-        shell: pwsh
+        shell: powershell
 
     steps:
       - name: ENV
@@ -72,10 +72,14 @@ jobs:
             iss = $clientId
           }))).TrimEnd('=').Replace('+', '-').Replace('/', '_');
           $rsa = [System.Security.Cryptography.RSA]::Create()
-          $base64 = $privateKey.Replace("-----BEGIN RSA PRIVATE KEY-----", "").Replace("-----END RSA PRIVATE KEY-----", "").Replace("\n", "").Replace("\r", "")
-          byte[] keyBytes = [Convert]::FromBase64String(base64)
-          $bytesRead = 0
-          rsa.ImportRSAPrivateKey(keyBytes, out $bytesRead)
+          if ($PSVersionTable.PSVersion.Major -ge 7) {
+            $rsa.ImportFromPem($privateKey)
+          } else {
+            $base64 = $privateKey.Replace("-----BEGIN RSA PRIVATE KEY-----", "").Replace("-----END RSA PRIVATE KEY-----", "").Replace("\n", "").Replace("\r", "")
+            byte[] keyBytes = [Convert]::FromBase64String(base64)
+            $bytesRead = 0
+            rsa.ImportRSAPrivateKey(keyBytes, out $bytesRead)
+          }
           $signature = [Convert]::ToBase64String($rsa.SignData([System.Text.Encoding]::UTF8.GetBytes("$header.$payload"), [System.Security.Cryptography.HashAlgorithmName]::SHA256, [System.Security.Cryptography.RSASignaturePadding]::Pkcs1)).TrimEnd('=').Replace('+', '-').Replace('/', '_')
           $jwt = "$header.$payload.$signature"
           Write-Host $jwt
