--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -75,6 +75,7 @@ jobs:
             $rsa = [System.Security.Cryptography.RSA]::Create()
             $rsa.ImportFromPem($args[0])
             $signature = [Convert]::ToBase64String($rsa.SignData([System.Text.Encoding]::UTF8.GetBytes("$header.$payload"), [System.Security.Cryptography.HashAlgorithmName]::SHA256, [System.Security.Cryptography.RSASignaturePadding]::Pkcs1)).TrimEnd('=').Replace('+', '-').Replace('/', '_')
+            Write-OutPut $signature
           } -args $privateKey
           $jwt = "$header.$payload.$signature"
           Write-Host $jwt
