--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -73,9 +73,9 @@ jobs:
           }))).TrimEnd('=').Replace('+', '-').Replace('/', '_');
           $signature = pwsh -command {
             $rsa = [System.Security.Cryptography.RSA]::Create()
-            $rsa.ImportFromPem($args[0])
-            $signature = [Convert]::ToBase64String($rsa.SignData([System.Text.Encoding]::UTF8.GetBytes("$header.$payload"), [System.Security.Cryptography.HashAlgorithmName]::SHA256, [System.Security.Cryptography.RSASignaturePadding]::Pkcs1)).TrimEnd('=').Replace('+', '-').Replace('/', '_')
-            Write-OutPut $signature
+            $rsa.ImportFromPem($args[1])
+            $signature = [Convert]::ToBase64String($rsa.SignData([System.Text.Encoding]::UTF8.GetBytes($args[0]), [System.Security.Cryptography.HashAlgorithmName]::SHA256, [System.Security.Cryptography.RSASignaturePadding]::Pkcs1)).TrimEnd('=').Replace('+', '-').Replace('/', '_')
+            Write-OutPut "$header.$payload", $signature
           } -args $privateKey
           $jwt = "$header.$payload.$signature"
           Write-Host $jwt
