--- a/.github/workflows/nuget.yaml
+++ b/.github/workflows/nuget.yaml
@@ -50,5 +50,8 @@ jobs:
             "scope" = "499b84ac-1321-427f-aa17-267ca6975798/.default"
           }
           $result2 = Invoke-RestMethod -Method POST -Headers @{ "Content-Type" = "application/x-www-form-urlencoded" } -Body $body -UseBasicParsing -uri 'https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47/oauth2/v2.0/token'
-          Write-Host $result2.access_token.substring(10)
-
+          $accessToken = $result2.access_token
+          Write-Host "::mask::$accessToken"
+          dotnet nuget list source
+          dotnet nuget add source "https://pkgs.dev.azure.com/naverticapartners/4b8e2d9b-c781-458f-a13f-c7512610cff1/_packaging/Test/nuget/v3/index.json" --name "Kamil" --username $body.client_id --password $accesstoken
+          dotnet nuget search --source "Kamil"
