--- a/.github/workflows/nuget.yaml
+++ b/.github/workflows/nuget.yaml
@@ -53,5 +53,5 @@ jobs:
           $accessToken = $result2.access_token
           Write-Host "::mask::$accessToken"
           $ENV:NUGET_AUTH_TOKEN = $accessToken
-          nuget sources add -Name "Kamil" -Source "https://pkgs.dev.azure.com/naverticapartners/4b8e2d9b-c781-458f-a13f-c7512610cff1/_packaging/Test/nuget/v3/index.json" -UserName $body.client_id
+          nuget sources add -Name "Kamil" -Source "https://pkgs.dev.azure.com/naverticapartners/4b8e2d9b-c781-458f-a13f-c7512610cff1/_packaging/Test/nuget/v3/index.json" -UserName "any" -Password $accesstoken
           nuget list -Source "https://pkgs.dev.azure.com/naverticapartners/4b8e2d9b-c781-458f-a13f-c7512610cff1/_packaging/Test/nuget/v3/index.json"
