--- a/.github/workflows/nuget.yaml
+++ b/.github/workflows/nuget.yaml
@@ -49,7 +49,9 @@ jobs:
             "grant_type" =" client_credentials"
             "scope" = "499b84ac-1321-427f-aa17-267ca6975798/.default"
           }
-          $result2 = Invoke-RestMethod -Method POST -Headers @{ "Content-Type" = "application/x-www-form-urlencoded" } -Body $body -UseBasicParsing -uri 'https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47/oauth2/v2.0/token'
+          $tenantId = '72f988bf-86f1-41af-91ab-2d7cd011db47'
+          $tenantId = 'f97b6981-e782-49dd-9fd3-3e3753aece3b'
+          $result2 = Invoke-RestMethod -Method POST -Headers @{ "Content-Type" = "application/x-www-form-urlencoded" } -Body $body -UseBasicParsing -uri "https://login.microsoftonline.com/$tenantId/oauth2/v2.0/token"
           $accessToken = $result2.access_token
           Write-Host "::mask::$accessToken"
           $feedUrl = 'https://pkgs.dev.azure.com/naverticapartners/4b8e2d9b-c781-458f-a13f-c7512610cff1/_packaging/Test/nuget/v3/index.json'
