--- a/.github/workflows/nuget.yaml
+++ b/.github/workflows/nuget.yaml
@@ -54,7 +54,7 @@ jobs:
           $result2 = Invoke-RestMethod -Method POST -Headers @{ "Content-Type" = "application/x-www-form-urlencoded" } -Body $body -UseBasicParsing -uri "https://login.microsoftonline.com/$tenantId/oauth2/v2.0/token"
           $accessToken = $result2.access_token
           Write-Host "::mask::$accessToken"
-          $feedUrl = 'https://pkgs.dev.azure.com/naverticapartners/4b8e2d9b-c781-458f-a13f-c7512610cff1/_packaging/Test/nuget/v3/index.json'
+          $feedUrl = 'https://pkgs.dev.azure.com/naverticapartners/AppSource%20Partners/_packaging/Test/nuget/v3/index.json'
           $headers = @{
             "Content-Type" = "application/json; charset=utf-8"
             "Authorization" = "Basic $([Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes("user:$accessToken")))"
