--- a/.github/workflows/nuget.yaml
+++ b/.github/workflows/nuget.yaml
@@ -57,8 +57,9 @@ jobs:
           $feedUrl = 'https://pkgs.dev.azure.com/naverticapartners/AppSource%20Partners/_packaging/Test/nuget/v3/index.json'
           $headers = @{
             "Content-Type" = "application/json; charset=utf-8"
-            "Authorization" = "Bearer $([Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes("user:$accessToken")))"
+            "Authorization" = "Basic $([Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes("user:$accessToken")))"
           }
+          $headers.Authorization = "Bearer $accessToken"
           Write-Host "Use Url: $feedUrl"
           $capabilities = Invoke-RestMethod -UseBasicParsing -Method GET -Headers $headers -Uri $feedUrl
           $searchQueryServiceUrl = $capabilities.resources | Where-Object { $_.'@type' -eq 'SearchQueryService/3.0.0-beta' } | Select-Object -ExpandProperty '@id' | Select-Object -First 1
